--- a/vimwiki/学习笔记/Java/Java学习笔记.wiki
+++ b/vimwiki/学习笔记/Java/Java学习笔记.wiki
@@ -36,3 +36,6 @@
     - [[../Android/GPS辅助数据下载工具|HTTP下载范例]]
     - [[压缩和解压文件]]
     - [[Socket通讯]]
+
+== 高级技巧 ==
+    - [[../Android/jni使用范例|通过JNI调用C/C++代码]]
