--- a/vimwiki/学习笔记/Linux/mmap使用详解.wiki
+++ b/vimwiki/学习笔记/Linux/mmap使用详解.wiki
@@ -3,7 +3,7 @@
 %toc
 
 == 相关函数 ==
-{{{class="brush：c"
+{{{class="brush:c"
 #include <sys/mman.h>
 
 void * mmap(void *start, size_t length, int prot , int flags, int fd, off_t offset);
