--- a/vimwiki/学习笔记/Android/Android.mk规范.wiki
+++ b/vimwiki/学习笔记/Android/Android.mk规范.wiki
@@ -185,7 +185,7 @@ include $(CLEAR_VARS)
 
 LOCAL_SRC_FILES := $(call all-subdir-java-files)
 
-LOCAL_SRC_FILES := \
+LOCAL_SRC_FILES += \
     xxx/xxx/xxx.aidl \
     xxx/xxx/xxx.java \
     xxx2/xxx2/xxx2.java
