--- a/vimwiki/学习笔记/Android/Wifi系统.wiki
+++ b/vimwiki/学习笔记/Android/Wifi系统.wiki
@@ -21,6 +21,8 @@
 == Wifi移植 ==
 [[http://blog.csdn.net/zhenwenxian/article/details/6575964|Wifi移植（Blog文章）]]
 
+{{images:pic/WiFi_and_BT_Porting_Guide.pdf|pic/WiFi_and_BT_Porting_Guide.pdf}}
+
 == 应用层控制 ==
 
 == Java层服务 ==
