--- a/vimwiki/学习笔记/VIM/Vim脚本语法学习.wiki
+++ b/vimwiki/学习笔记/VIM/Vim脚本语法学习.wiki
@@ -13,9 +13,9 @@ $ hg clone https://vim.googlecode.com/hg/ vim
 
 # 3. 编译vim
 # 可选的参数：--enable-python3interp=yes --enable-sniff=yes --enable-hangulinput=yes
-#             --with-local-dir=/usr/local
+#             --with-local-dir=/usr/local --enable-gui=gnome2
 $ cd vim
-$ ./configure --enable-multibyte --with-features=huge --enable-xim=yes --enable-pythoninterp=yes \
+$ ./configure --enable-multibyte=yes --with-features=huge --enable-xim=yes --enable-pythoninterp=yes \
               --enable-gui=yes --enable-cscope=yes --enable-fontset=yes --enable-perlinterp=yes \
               --enable-mzschemeinterp=yes --enable-luainterp=yes --enable-rubyinterp=yes \
               --enable-tclinterp=yes --with-vim-name=vim7.3
