--- a/vimwiki/学习笔记/Java/拷贝文件.wiki
+++ b/vimwiki/学习笔记/Java/拷贝文件.wiki
@@ -7,6 +7,7 @@
 import java.io.File;
 import java.io.FileInputStream;
 import java.io.FileOutputStream;
+import java.io.IOException;
 import java.nio.channels.FileChannel;
 import java.nio.ByteBuffer;
 }}}
@@ -14,23 +15,41 @@ import java.nio.ByteBuffer;
 == 古老的方式 ==
 {{{class="brush:java"
 public static void forJava(File f1,File f2) throws Exception{
-    int length=2097152;
+    int length = 2097152;
     
-    FileInputStream in=new FileInputStream(f1);
-    FileOutputStream out=new FileOutputStream(f2);
-    byte[] buffer=new byte[length];
+    FileInputStream is = new FileInputStream(f1);
+    FileOutputStream os = new FileOutputStream(f2);
+    int count = 0;
+    byte[] buffer = new byte[length];
     
-    while(true){
-        int ins=in.read(buffer);
-        
-        if(ins==-1){
-            in.close();
-            out.flush();
-            out.close();
+    try {
+        while (true) {
+            count = is.read(buffer);
             
-            return;
-        } else
-            out.write(buffer,0,ins);
+            if (count < 0) {
+                break;
+            } else {
+                os.write(buffer, 0, count);
+            }
+        }
+    } catch (Exception e) {
+		e.printStackTrace();
+    } finally {
+        if (is != null) {
+            try {
+                is.close();
+            } catch (IOException e) {
+            }
+            is = null;
+        }
+
+        if (os != null) {
+            try {
+                os.flush();
+                os.close();
+            } catch (Exception e2) {
+            }
+            os = null;
         }
     }
 }
