--- a/vimwiki/学习笔记/Android/jni使用范例.wiki
+++ b/vimwiki/学习笔记/Android/jni使用范例.wiki
@@ -120,8 +120,9 @@ jint JNI_OnLoad(JavaVM* vm, void* reserved) {
     // 调用其他注册函数
     registerMethods2(env);
     registerMethods3(env);
+    // 可预先获取Java对象的，并封装在struct中
+    // ......
 
-    /* success -- return valid version number */
     result = JNI_VERSION_1_4;
 
 bail:
@@ -139,14 +140,15 @@ jobject Java_setLineBreaksForCharArray(JNIEnv *env,
                                      jint length, 
                                      jstring lang, 
                                      jbyteArray breaks) {
-    // 获取Java类
+    // 根据参数获取Java类
     jclass cls;
     cls = env->GetObjectClass(thiz);
+    // 或根据类名获取Java类
     cls = env->FindClass("com/foxconn/example/reader");
-    
-    // 获取Java对象
-    jobject obj;
-    obj = env->GetObjectField(thiz, reader);
+    // 如果是内部类，则必须以$号隔开
+    cls = env->FindClass("com/foxconn/example/reader$inner");
+    // 获取父类对象
+    jclass supercls = env->GetSuperclass(cls);
     
     // 获取类并通过构造函数生成的新对象, <init>为构造函数, V为返回值类型签名, I为参数类型签名
     jmethodID constr;
@@ -158,9 +160,12 @@ jobject Java_setLineBreaksForCharArray(JNIEnv *env,
     // 获取java对象成员的ID标识
     // 第一个参数：jclass对象
     // 第二个参数：成员变量名
-    // 第三个参数：变量类型
+    // 第三个参数：变量类型签名，如果是内部类，需要使用$标识，方法同上
     jfieldID fid;
     fid = env->GetFieldID(cls, "retbytes", "[B"]);
+    // 获取成员对象，此处是获取jbyte类型为例
+    jbyte byte;
+    byte = env->GetObjectField(thiz, fid);
     
     // 给该ID标识的变量赋值
     // 第一个参数：jobject对象
@@ -181,10 +186,10 @@ void Java_setLineBreaksForCharArray(JNIEnv *env,
                                  jstring lang, 
                                  jbyteArray breaks) {
     // 获取对象方法ID
-    // 第一个参数：jclass对象
+    // 第一个参数：jclass对象，参见上面java类的获取
     // 第二个参数：方法名
-    // 第三个参数：(I)V，参数和返回类型签名                                                                     
-    int mid = GetMethodID(clazz, "getD1", "(I)V");
+    // 第三个参数：(I)V，参数和返回类型签名。内部类可参照上面的方法                                                                     
+    int mid = env->GetMethodID(clazz, "getD1", "(I)V");
     if(mid == 0) {
         return;
     }
@@ -253,7 +258,7 @@ void Java_setLineBreaksForCharArray(JNIEnv *env,
     env->DeleteWeakGlobalRef(jref);
 }}}
 
-=== 解析Java参数 ===
+=== Java参数解析 ===
 {{{class="brush:c"
 void Java_setLineBreaksForCharArray(JNIEnv *env, 
                                  jobject thiz, 
@@ -269,6 +274,9 @@ void Java_setLineBreaksForCharArray(JNIEnv *env,
     // 转换Java的byte数组类型, 用完后释放内存
     jbyte* breaksArray = env->GetByteArrayElements(breaks, 0);
     env->ReleaseByteArrayElements(breaks, breaksArray, 0);
+    
+    // 获取数组的长度
+    jsize len = env->GetArrayLength(breaks);
 	
     // 转换Java的string类型, 用完后释放内存
     const char *langArray = (lang != 0) ? env->GetStringUTFChars(lang, 0) : 0;
@@ -278,7 +286,6 @@ void Java_setLineBreaksForCharArray(JNIEnv *env,
 
     // 将转换后的类型可与C类型兼容
     set_linebreaks_utf16(dataArray + offset, length, langArray, (char*)breaksArray);
-
 }}}
 
 === 给Java传递返回值 ===
@@ -300,7 +307,7 @@ jstring Java_setLineBreaksForCharArray(JNIEnv *env,
     // 创建string类型变量并返回给java
     char charStr[50];
     jstring jstr;
-    jstr = env -> NewStringUTF(charStr);
+    jstr = env->NewStringUTF(charStr);
     
     return jstr;
 }
@@ -315,22 +322,22 @@ jstring Java_setLineBreaksForCharArray(JNIEnv *env,
                                      jint length, 
                                      jstring lang, 
                                      jbyteArray breaks) {
-    jbyteArray bytearray; 
-    bytearray = env->NewByteArray(len);
-    const char* const kClassName = "com/mokoid/server/LedService";
-    jclass clazz;
-    clazz = env->FindClass(kClassName);
-
+    // 检查是否出现异常
+    jboolean hasExcept = env->ExceptionCheck(env);
+    if (hasExcept) {
+        printf("Has Exception!!!\n");
+    }
+    
     // 获取当前的异常对象
-    jthrowable jthrow = ExceptionOccurred();
+    jthrowable jthrow = env->ExceptionOccurred();
     if (jthrow != null) {
         // 抛出异常
-        Throw(jthrow);
-        ThrowNew(clazz, "send exception message to java");
+        env->Throw(jthrow);
+        env->ThrowNew(clazz, "send exception message to java");
     }
     
     // 清除异常
-    ExceptionClear();
+    env->ExceptionClear();
     
     return bytearray;
 }
