--- a/vimwiki/学习笔记/Java/包管理与类型声明.wiki
+++ b/vimwiki/学习笔记/Java/包管理与类型声明.wiki
@@ -1,5 +1,8 @@
 = 包管理 =
 
+%toc
+
+
 == 包的创建和导入 ==
 *关键字package和import，通常package名为小写，class名为第一个字母大写，每个包都只有一个public类，类名需与该类的文件名相同*
 {{{class="brush: java"
@@ -25,7 +28,7 @@ CLASSPATH=.:$JAVA_HOME:$PROJECT_HOME/XXX.jar
 *该权限说明只有在类的内部才是可访问的，其他外部都是不可见的*
 
 === friendly访问权限 ===
-*不加任何修饰符的默认权限，该权限说明在包内部是可见的，外部是部可见的*
+*不加任何修饰符的默认权限，该权限说明在包内部是可见的，外部是不可见的*
 
 == 组合和继承 ==
 === 组合 ===
