--- a/vimwiki/学习笔记/index.wiki
+++ b/vimwiki/学习笔记/index.wiki
@@ -10,7 +10,7 @@
 
 == 程序设计 ==
     - [[Linux/Linux系统编程|Linux系统编程]] ---------------------------------- _零零碎碎的Linux编程心得_
-    - [[Driver/Linux驱动笔记|Linux驱动笔记]] --------------------------- _记录Linux驱动编程的要点_
+    - [[Driver/Linux驱动笔记|Linux驱动笔记和内核知识]] --------------------------- _记录Linux驱动编程的要点_
     - [[Python/Python学习笔记|Python学习笔记]] -------------------------- _Python语言的使用技巧和心得_
     - [[GO/Go语言学习笔记|Go语言学习笔记]] ------------------------------ _Google的编程语言Go_
     - [[Java/Java学习笔记|Java学习笔记]] ------------------------------ _记录学习Java的一些要点和心得_
