--- a/vimwiki/学习笔记/index.wiki
+++ b/vimwiki/学习笔记/index.wiki
@@ -2,7 +2,7 @@
 
 %toc
     
-== 操作系统 ==
+== 软件与应用 ==
     - [[Debian/Debian优化指南|Debian优化指南]] --------------------------------- _装机必备_
     - [[Net/iptables|iptables使用]] ------------------------------- _iptables的用法和配置_
 
@@ -28,7 +28,7 @@
 
 ----
 
-== 应用软件 ==
+== 开发工具 ==
     - [[Latex/Latex学习笔记|Latex学习笔记]] ---------------------------- _LaTex是一个基于Tex排版系统的语言_
     - [[VIM/Vim脚本语法学习|Vim脚本学习笔记]] -------------------------- _VIM是一个强大的编辑器_
 
