Force commit by sync_github.sh

--- a/vimwiki/学习笔记/Linux/大端和小端模式.wiki
+++ b/vimwiki/学习笔记/Linux/大端和小端模式.wiki
@@ -20,3 +20,58 @@
 |----------|----------|----------|----------|----------|---------------------|
 | 小端模式 | 0x78     | 0x56     | 0x34     | 0x12     | 符合人的习惯        |
 | 大端模式 | 0x12     | 0x34     | 0x56     | 0x78     | 有利于内存地址输出  |
+
+== 测试大小端的方法 ==
+=== 方法一 - 结构体位模式 ===
+{{{class="brush:c"
+struct little_big_endian_t {
+    unsigned int a:2;
+    unsigned int b:2;
+    unsigned int c:3;
+    unsigned int d:1;
+};
+
+/**
+ * @Synopsis 11110001 => 241, 小端模式会按照a,b,c,d的顺序从低到高存储数据。
+ */
+void test_little_big_endian()
+{
+    struct little_big_endian_t lb = {
+        .a = 01,
+        .b = 00,
+        .c = 111,
+        .d = 1
+    };
+
+    printf("lb = %d\n", *(int*)&lb); 
+}
+}}}
+
+=== 方法二 - 指针强制转换 ===
+{{{class="brush:c"
+void test_little_big_endian2()
+{
+    static const int v = 1;
+    char *endian = *(char*)&v == 1 ? "this is little endian" : "this is big endian";
+
+    printf("%s\n", endian);
+}
+}}}
+
+=== 方法三 - 宏定义===
+{{{class="brush:c"
+void test_little_big_endian3()
+{
+#if BYTE_ORDER == LITTLE_ENDIAN
+    printf("this is little endian\n");
+#endif
+
+#if BYTE_ORDER == BIG_ENDIAN
+    printf("this is big endian\n");
+#endif
+
+#if BYTE_ORDER == PDP_ENDIAN
+    printf("this is pdp endian\n");
+#endif
+}
+}}}
