--- a/vimwiki/学习笔记/index.wiki
+++ b/vimwiki/学习笔记/index.wiki
@@ -5,6 +5,7 @@
 == 软件与应用 ==
     - [[Debian/Debian优化指南|Debian优化指南]] --------------------------------- _装机必备_
     - [[Net/iptables|iptables使用]] ------------------------------- _iptables的用法和配置_
+    - [[Debian/代码管理工具|代码管理工具]]
 
 ----
 
@@ -39,7 +40,7 @@
 
 ----
 
-== 哲学思想 ==
+== 哲学与政治 ==
     - [[国学/国学|国学]]
     - [[国学/中国朝代表|中国朝代表]]
     - [[国学/历届中央政治局常委|历届中央政治局常委]]
@@ -47,5 +48,6 @@
 ----
 
 == 其他 ==
-    - [[diary/diary|个人日记]]   ------------------------------------ _个人日记_
+    %% - [[diary/diary|个人日记]]   ------------------------------------ _个人日记_
+    - [[blog/blog|我的文章]] ------------------------------------ _记录了学习和生活中的想法和感悟_
     - [[网址|一些有用的网址]]    ------------------------------------ 网址
