--- a/vimwiki/学习笔记/Java/JUnit单元测试.wiki
+++ b/vimwiki/学习笔记/Java/JUnit单元测试.wiki
@@ -15,8 +15,15 @@ import junit.textui.TestRunner;
 - 编写测试用例，以`test`开头的方法名,返回值为`public void`类型
 - 编写测试组件，并添加测试用例到测试组件中，通过`TestRunner.run`来运行测试组件
 
-== 示例代码 ==
+== 配置junit.jar ==
+- 此处点击下载[[http:pic/junit-4.8.jar.zip|junit-4.8版本Zip包]]。
+- 将junit.jar拷贝到当前的jre目录，在编译时需要包含该jar包。
+- 在环境变量CLASSPATH中加入junit.jar
+{{{class="brush:bash"
+$ export CLASSPATH=$CLASSPATH:/path/to/junit.jar
+}}}
 
+== 示例代码 ==
 === 测试用例类 ===
 {{{class="brush:java"
 public class JunitTest extends TestCase {
@@ -31,12 +38,22 @@ public class JunitTest extends TestCase {
 
     // 初始化方法
     protected void setUp() {
+        try {
+            super.setUp();
+        } catch(Exception e) {
+        }
+        
         System.out.println("JunitTest setUp");
     }
 
     // 析构方法
     protected void tearDown() {
         System.out.println("JunitTest tearDown");
+        
+        try {
+            super.tearDown();
+        } catch(Exception e) {
+        }
     }
 
     // 静态方法，返回测试组件
